# regbroker

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  pyproject.toml  regbroker.spec  requirements.txt
core/: CMakeLists.txt
core/include/core/: decoder.hpp  hive.hpp  recovery.hpp  structures.hpp
core/src/: main.cpp
core/src/core/: decoder.cpp  hive.cpp  recovery.cpp
regbroker/: main.py  repl.py
regbroker/tui/: config_panel.py  tree_nav.py
src/: __init__.py  bridge.py  config.py  hive_utils.py  main.py  minimal_repl.py  repl.py
src/ai/: openrouter.py  report.py
src/tui/: config_panel.py  editor.py  tree_nav.py
