[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "regbroker"
version = "1.0.0"
description = "Windows Registry Hive Forensics Tool with AI-powered Analysis"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "fpdf2>=2.7",
    "pyperclip>=1.8",
]

[project.scripts]
regbroker = "regbroker.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["regbroker*"]
